2004-03-13  Per Bothner  <per@bothner.com>

	* WithTransform.java (getBounds2D):  Make transformed shape.

2004-02-13  Per Bothner  <per@bothner.com>

	* Paintable.java:  New interface,
	* DrawImage.java:  New class, implements Paintable.
	* DrawShape.java:  New class, implements Paintable.
	* FillShape.java:  New class, implements Paintable.
	* WithComposite.java:  New class, implements Paintable.
	* WithPaint.java:  New class, implements Paintable.
	* WithTransform.java:  New class, implements Paintable.
	* Makefile.am (java_sources):  Update accordingly.

2003-07-21  Per Bothner  <per@bothner.com>

	New package.
	* Button.java:  New class, implements Vewable.
	* MenuItem.java:  New class.
	* ViewContainer.java:  New interface.
	* Viewable.java:  New interface.
	* Makefile.am:  New file.