@@ -1,0 +1,11 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+  <head>
+    <title>The gnu.kawa.models package</title>
+  </head>
+  <body>
+<p>Model classes for an experimental model-view-controller framework.</p>
+<p>A set of <q>view</q> classes that use these can be found in
+the {@link gnu.kawa.swingviews swingviews} package.
+</body>
+</html>
