@@ -1,0 +1,10 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+  <head>
+    <title>The gnu.kawa.swingview package</title>
+  </head>
+  <body>
+<p>Swing-based view classes for an experimental model-view-controller framework.</p>
+<p>These use the {@link gnu.kawa.models models} package.</p>
+</body>
+</html>
