@@ -1,3 +1,7 @@
+2005-04-03  Per Bothner  <per@bothner.com>
+
+	* package.html: New file, for javadoc.
+
 2004-03-13  Per Bothner  <per@bothner.com>
 
 	* WithTransform.java (getBounds2D):  Make transformed shape.
